# keeb-firmware

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: keyboard.rs  lib.rs  main.rs
src/ble/: descriptor.rs  mod.rs  service_hid.rs  spec.rs
